FloatingButtons: Set z-index to avoid overlaps

--- a/client/layout/floating-actions/style.scss
+++ b/client/layout/floating-actions/style.scss
@@ -1,4 +1,5 @@
 .floating-actions {
+	z-index: z-index( 'root', '.floating-help' );
 	position: fixed;
 	padding: 10px;
 	right: 0;
